update the HTML code

--- a/Traffic_Sign_Classifier.html
+++ b/Traffic_Sign_Classifier.html
@@ -13227,7 +13227,7 @@ div#notebook {
 <span class="n">n_test</span> <span class="o">=</span> <span class="n">y_test</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
 
 <span class="c1"># TODO: What&#39;s the shape of an traffic sign image?</span>
-<span class="n">image_shape</span> <span class="o">=</span> <span class="n">X_train</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">1</span><span class="p">:</span><span class="mi">3</span><span class="p">]</span>
+<span class="n">image_shape</span> <span class="o">=</span> <span class="n">X_train</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">1</span><span class="p">:</span><span class="mi">4</span><span class="p">]</span>
 
 <span class="c1"># TODO: How many unique classes/labels there are in the dataset.</span>
 <span class="n">n_classes</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">max</span><span class="p">(</span><span class="n">train</span><span class="p">[</span><span class="s1">&#39;labels&#39;</span><span class="p">])</span><span class="o">+</span><span class="mi">1</span>
@@ -13256,7 +13256,7 @@ div#notebook {
 <pre>Number of training examples = 34799
 Number of validation examples = 4410
 Number of testing examples = 12630
-Image data shape = (32, 32)
+Image data shape = (32, 32, 3)
 Number of classes = 43
 </pre>
 </div>
